# APOS

./: .gitignore  .jira_sync_history.json  BOOTSTRAP_GATE.md  CAPABILITIES.md  CLAUDE.md  COMPETITIVE_POSITIONING.md  GOVERNANCE.md  IMPLEMENTATION_STATUS.md  METRICS_README.md  NORTH_STAR.md  OKR.md  ONTOLOGY.md  PURPOSE.md  R0_STATUS_REPORT.md  README.md  ROADMAP_R1_R4.md  SEMANTIC_LAYER.md  SESSAO_R0_RESUMO_EXECUTIVO.md  SESSION_BOOTSTRAP_R0.md  SESSION_R0_COMPLETION_SUMMARY.md  TASKS_JIRA_ALIGNMENT_REPORT.md  VALUE_PROPOSITION.md  pyproject.toml  requirements-dev.txt  setup.py
.claude/: settings.json  settings.local.json
.claude/agents/: apos-strategy-agent.md
.claude/jobs-to-be-done/: SKILL.md
apos/: __init__.py  __main__.py  cli.py  errors.py  validate.py
apos/bootstrap/: __init__.py  gate.py  gate_v2.py  session.py
apos/capabilities/: __init__.py  agents.py  model.py  router.py  taxonomy.py
apos/context_engine/: __init__.py  boundaries.py  context.py  memory.py  retrieval.py
apos/core/: __init__.py  graph.py  types.py
apos/governance/: __init__.py  audit.py
docs/: COMMIT_TRACKING.md  DAILY_STANDUP_MODES.md  KERNEL_COMMIT_TRACKING_SPEC.md  RELEASE_MANAGEMENT_FRAMEWORK.md
examples/: release_management_example.py
scripts/: jira_add_sprint_agile.py  jira_add_to_sprint.py  jira_audit.py  jira_create_tasks.py  jira_create_tasks_demo.py  jira_remove_issue.py  jira_setup_auto.py  jira_setup_complete.py  jira_sprint_setup.py  jira_sync_tasks.py  jira_trust_score_demo.py  jira_trust_score_pilot.py  jira_update_sprint.py  metrics_collector.py  validate_project_adapter.py
tests/: conftest.py  test_bootstrap.py  test_governance.py
(+288 files in other folders)
